[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_06/Pawn_06_Part_Body.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Pawns/Pawn_05/Parts/Pawn_05_Part_Key.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Pawns/Pawn_06/Parts/Pawn_06_Part_Head.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Pawns/Pawn_06/Parts/Pawn_06_Part_Hover.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Pawns/Pawn_06.gd" type="Script" id=5]

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 15, 25, -15, 25, -5, -7, 5, -7 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0
height = 12.0

[sub_resource type="Animation" id=4]
resource_name = "Right-Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Body_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_06_Part_Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, -14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pawn_06_Part_Head:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pawn_06_Part_Hover:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pawn_06_Part_Hover:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body_Sprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Body_Sprite:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("POS_Gun:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -5 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("POS_Gun:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Right-Prone-Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Body_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_06_Part_Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pawn_06_Part_Head:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pawn_06_Part_Hover:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, 22 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pawn_06_Part_Hover:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("POS_Gun:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 13 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("POS_Gun:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Body_Sprite:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Body_Sprite:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Right-Run"
tracks/0/type = "value"
tracks/0/path = NodePath("Body_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_06_Part_Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, -14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pawn_06_Part_Head:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pawn_06_Part_Hover:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3, 14 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pawn_06_Part_Hover:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 20.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body_Sprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Body_Sprite:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("POS_Gun:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5, -5 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("POS_Gun:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 23.0
height = 38.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.0
height = 30.0

[node name="Pawn_06" type="KinematicBody2D" groups=[
"hittable",
"ladder",
"player",
]]
collision_layer = 2
collision_mask = 1566
script = ExtResource( 5 )

[node name="Timers" type="Node2D" parent="."]

[node name="Knock_Back" type="Timer" parent="Timers"]

[node name="Shield_Hit" type="Timer" parent="Timers"]

[node name="Shield_Up" type="Timer" parent="Timers"]

[node name="NRG_Up" type="Timer" parent="Timers"]

[node name="Speed" type="Timer" parent="Timers"]

[node name="Jump" type="Timer" parent="Timers"]

[node name="Stun" type="Timer" parent="Timers"]

[node name="Raycast" type="Node2D" parent="."]

[node name="Up" type="RayCast2D" parent="Raycast"]
position = Vector2( 0, -17 )
enabled = true
cast_to = Vector2( 0, -5 )

[node name="Down_L" type="RayCast2D" parent="Raycast"]
position = Vector2( -13, 15 )
enabled = true
cast_to = Vector2( 0, 13 )
collision_mask = 30

[node name="Down_C" type="RayCast2D" parent="Raycast"]
position = Vector2( 0, 15 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 28

[node name="Down_R" type="RayCast2D" parent="Raycast"]
position = Vector2( 13, 15 )
enabled = true
cast_to = Vector2( 0, 13 )
collision_mask = 30

[node name="Pawn_06_Part_Head" parent="." instance=ExtResource( 3 )]
position = Vector2( 3, -14 )

[node name="Body_Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1 )
texture = ExtResource( 1 )
hframes = 6

[node name="Pawn_06_Part_Hover" parent="." instance=ExtResource( 4 )]
show_behind_parent = true
position = Vector2( 0, 15 )

[node name="Pawn_05_Part_Key" parent="." instance=ExtResource( 2 )]
position = Vector2( -3, -4 )

[node name="Shape_Left" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -11 )
shape = SubResource( 7 )
disabled = true

[node name="Shape_Stand" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -11 )
shape = SubResource( 7 )

[node name="Shape_Right" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -11 )
shape = SubResource( 7 )

[node name="Shape_Down" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, 13 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="POS_Gun" type="Position2D" parent="."]
position = Vector2( 0, -5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Right-Idle = SubResource( 4 )
anims/Right-Prone-Idle = SubResource( 6 )
anims/Right-Run = SubResource( 5 )

[node name="Shield_Sprite" type="Sprite" parent="."]

[node name="Pick_Up_Area" type="Area2D" parent="."]
visible = false
collision_layer = 262144
collision_mask = 786432

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pick_Up_Area"]
position = Vector2( 0, 5 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Ladder_Area" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder_Area"]
shape = SubResource( 3 )
[connection signal="body_entered" from="Pick_Up_Area" to="." method="_on_Pick_Up_Area_body_entered"]
[connection signal="body_exited" from="Pick_Up_Area" to="." method="_on_Pick_Up_Area_body_exited"]
[connection signal="body_entered" from="Ladder_Area" to="." method="_on_Ladder_Area_body_entered"]
[connection signal="body_exited" from="Ladder_Area" to="." method="_on_Ladder_Area_body_exited"]
